# chisel3

./: FirFilter.scala  build.sbt  example.scala
core/src/main/scala/chisel3/: Data.scala  IO.scala  IntegerPropFactory.scala  Module.scala  Properties.scala  RawModule.scala  VerbatimMode.scala  package.scala
core/src/main/scala/chisel3/experimental/: package.scala
core/src/main/scala/chisel3/internal/: Binding.scala  Builder.scala  MonoConnect.scala
core/src/main/scala/chisel3/internal/firrtl/: Converter.scala  IR.scala
core/src/main/scala/chisel3/internal/mlir/: Converter.scala  IR.scala
core/src/main/scala/chisel3/properties/: Property.scala
core/src/main/scala/chisel3/reflect/: DataMirror.scala
firrtl/src/main/scala/firrtl/ir/: IR.scala  Serializer.scala
macros/src/main/scala/chisel3/internal/: InstantiableMacro.scala
native-mlir/src/native/: CMakeLists.txt  IR.c
native/arm64-darwin/: libMLIRCAPIIR.dylib
plugin/src/main/scala/chisel3/internal/plugin/: ChiselComponent.scala
project/: plugins.sbt
src/main/scala/chisel3/stage/phases/: Convert.scala
src/main/scala/chisel3/util/experimental/: BoringUtils.scala
src/test/scala/chiselTests/: BoringUtilsSpec.scala
src/test/scala/chiselTests/naming/: NamePluginSpec.scala
